  * Introduced ghost simulators system
  * Introduced parameterization UI for simulators and observers 
    in OpenFLUID-Builder
  * Introduced required/used conditions for parameters of simulators 
  * Introduced ability to provide translations for wares in OpenFLUID-Builder
  * Introduced variables in parameters values, giving informations 
    about run environment
  * Added iterators for VectorValue and MapValue types
  * Added new TreeValue structure for tree-like data
  * Added basic filesystem tools
  * Added command line parser class
  * Added API primitive to get a list of spatial units in a given class
  * Improved OpenFLUID-LandR library
  * Improved OpenFLUID-Builder look'n'feel
  * Modified usage of OpenFLUID command line application 
  * Renamed classes for better understanding, with compatibility aliases
  * Renamed accessor methods according to the evolution of the coding style
  * Introduced openfluid::scientific namespace for scientific helpers
  * Refactored openfluid::tools namespace with the introduction of 
    the openfluid::scientific namespace 
  * Removed wares dependencies to boost libraries
  * Updated OpenFLUID applications icons
  * Updated documentation
  * Fixed name mangling for Fortran90 modules in Fortran/C interface
  * Fixed potential conflicts in headers guards
  * Fixed minor errors in documentation 
  * Fixed minor bugs
  * Cleaned source code



2.0.2

  * Introduced management of multiple workspaces
  * Added geographic file format observer based on GDAL, in order to export
    simulations variables in geographic vector files
  * Updated simulation dialog in GUI applications
    with control buttons and enhanced informations
  * Renamed information file of projects 
    from openfluid.prj to openfluid-project.conf
  * Refactored UI components namespaces and organization
  * Modified constraints on events appending from simulators,
    now allowed in PREPAREDATA stage and later stages